Закончен блок ХИТЫ

--- a/source/index.html
+++ b/source/index.html
@@ -85,7 +85,7 @@
                 <p>катушка Adrenalin 7300 BC</p>
                 <span>5 600 р.</span>
                 <a href="#">Купить</a>
-                <img src="img/coil.png" width="333" height="426">
+                <img src="img/coil.png" width="333" height="426" alt="Катушка Adrenalin 7300 BC">
               </li>
             </ul>
             <ul class="preview__slides">
@@ -100,7 +100,7 @@
                 <h4>Новые приманки</h4>
                 <p>для подледной ловли</p>
                 <div class="navigation__rawbite">
-                  <img src="img/rawbite.png" width="160" height="171">
+                  <img src="img/rawbite.png" width="160" height="171" alt="Новые приманки">
                 </div>
               </a>
             </li>
@@ -109,7 +109,7 @@
                 <h4>Скачайте каталог</h4>
                 <p>для оптовиков</p>
                 <div class="navigation__journal">
-                  <img src="img/journal.png" width="162" height="186">
+                  <img src="img/journal.png" width="162" height="186" alt="Каталог">
                 </div>
               </a>
             </li>
@@ -118,13 +118,101 @@
                 <h4>Эксперты отвечают</h4>
                 <p>на ваши вопросы</p>
                 <div class="navigation__pike-fisherman">
-                  <img src="img/pike-fisherman.png" width="262" height="224">
+                  <img src="img/pike-fisherman.png" width="262" height="224" alt="Рыбак с щукой">
                 </div>
               </a>
             </li>
           </ul>
         </div>
       </div>
+    </section>
+
+    <section class="hits">
+      <div class="hits__title">
+        <h2>Хиты продаж</h2>
+        <a href="#">Весь каталог</a>
+        <button class="hits__bth_back" type="button"><span class="visually-hidden">Кнопка влево</span></button>
+        <button class="hits__bth_next" type="button"><span class="visually-hidden">Кнопка вправо</span></button>
+      </div>
+      <ul class="hits__list">
+        <li class="hits__item">
+          <a class="hits__item_link" href="#">
+            <div class="hits__item_coil-small">
+              <img src="img/coil-small.png" width="263" height="269" alt="Катушка">
+            </div>
+            <h3>Бестселлер</h3>
+            <p>катушка Adrenalin 7300 BC</p>
+            <span>4 800 р.</span>
+          </a>
+        </li>
+        <li class="hits__item hits__item_rollenhalter">
+          <b class="hit">Хит</b>
+          <div class="hits__rollenhalter">
+            <img src="img/rollenhalter.png" width="200" height="220" alt="Удилище">
+          </div>
+          <div class="hits__stars">
+            <input id="rollenhalter-4" type="radio" name="reviewStars" />
+            <label title="gorgeous" for="rollenhalter-4"></label>
+            <input id="rollenhalter-3" type="radio" name="reviewStars" />
+            <label title="good" for="rollenhalter-3"></label>
+            <input id="rollenhalter-2" type="radio" name="reviewStars" />
+            <label title="regular" for="rollenhalter-2"></label>
+            <input id="rollenhalter-1" type="radio" name="reviewStars" />
+            <label title="poor" for="rollenhalter-1"></label>
+            <input id="rollenhalter-0" type="radio" name="reviewStars" />
+            <label title="bad" for="rollenhalter-0"></label>
+          </div>
+          <p>Удилище</p>
+          <p>Matze Koch Rollen</p>
+          <span>13 490 р.</span>
+          <button type="button">В корзину</button>
+        </li>
+        <li class="hits__item hits__item_shad-jigging">
+          <b class="discount">Скидка</b>
+          <b class="hit">Хит</b>
+          <div class="hits__shad-jigging">
+            <img src="img/shad-jigging.png" width="200" height="220" alt="Приманка">
+          </div>
+          <div class="hits__stars">
+            <input id="shad-jigging-4" type="radio" name="reviewStars" />
+            <label title="gorgeous" for="shad-jigging-4"></label>
+            <input id="shad-jigging-3" type="radio" name="reviewStars" />
+            <label title="good" for="shad-jigging-3"></label>
+            <input id="shad-jigging-2" type="radio" name="reviewStars" />
+            <label title="regular" for="shad-jigging-2"></label>
+            <input id="shad-jigging-1" type="radio" name="reviewStars" />
+            <label title="poor" for="shad-jigging-1"></label>
+            <input id="shad-jigging-0" type="radio" name="reviewStars" />
+            <label title="bad" for="shad-jigging-0"></label>
+          </div>
+          <p>Приманка</p>
+          <p>Matze Koch Rollen</p>
+          <span>3 240 р.<del>6200 р.</del></span>
+          <button type="button">В корзину</button>
+        </li>
+        <li class="hits__item">
+          <b class="hit">Хит</b>
+          <div class="hits__coil-hits">
+            <img src="img/coil-hits.png" width="200" height="220" alt="Катушка">
+          </div>
+          <div class="hits__stars">
+            <input id="coil-hits-4" type="radio" name="reviewStars" />
+            <label title="gorgeous" for="coil-hits-4"></label>
+            <input id="coil-hits-3" type="radio" name="reviewStars" />
+            <label title="good" for="coil-hits-3"></label>
+            <input id="coil-hits-2" type="radio" name="reviewStars" />
+            <label title="regular" for="coil-hits-2"></label>
+            <input id="coil-hits-1" type="radio" name="reviewStars" />
+            <label title="poor" for="coil-hits-1"></label>
+            <input id="coil-hits-0" type="radio" name="reviewStars" />
+            <label title="bad" for="coil-hits-0"></label>
+          </div>
+          <p>Катушка</p>
+          <p>Matze Koch Rollen</p>
+          <span>5 600 р.</span>
+          <button type="button">В корзину</button>
+        </li>
+      </ul>
     </section>
   </main>
 
