Вёрстка главной завершена

--- a/source/index.html
+++ b/source/index.html
@@ -17,10 +17,10 @@
     <div class="header__top_wrap">
       <div class="header__top">
         <ul class="header__services">
-          <li>Доставка</li>
-          <li>Оплата</li>
-          <li>Возврат</li>
-          <li>Оптовым покупателям</li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Оплата</a></li>
+          <li><a href="#">Возврат</a></li>
+          <li><a href="#">Оптовым покупателям</a></li>
         </ul>
         <div class="header__phone">
           <p>бесплатно по России</p>
@@ -105,7 +105,7 @@
               </a>
             </li>
             <li class="navigation__preview-links_item">
-              <a href="#">
+              <a href="#" download>
                 <h4>Скачайте каталог</h4>
                 <p>для оптовиков</p>
                 <div class="navigation__journal">
@@ -392,6 +392,78 @@
   </main>
 
   <footer class="footer">
+    <div class="footer__top">
+      <div class="footer__wrapper">
+        <div class="footer__logo">
+          <a href="#">LOGOtype</a>
+        </div>
+        <p>официальный представитель<br>в России</p>
+        <a href="#" download>Скачать каталог 2020</a>
+        <a href="#">Связатья с нами</a>
+      </div>
+      <ul class="footer__navigation">
+        <li class="footer___item">
+          <h3>Компания</h3>
+          <ul class="footer___list">
+            <li><a href="#">О компании</a></li>
+            <li><a href="#">Акции</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Блог</a></li>
+            <li><a href="#">Эксперты</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </li>
+        <li class="footer___item">
+          <h3>Покупателям</h3>
+          <ul class="footer___list">
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Оплата</a></li>
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Возврат</a></li>
+            <li><a href="#">Помощь</a></li>
+          </ul>
+        </li>
+        <li class="footer___item">
+          <h3>Оптовикам</h3>
+          <ul class="footer___list">
+            <li><a class="footer___item_phone" href="tel:8(800)0000000">8 (800) 000-00-00</a></li>
+            <li><a class="footer___item_phone" href="tel:8(800)0000000">8 (800) 000-00-00</a></li>
+            <li><a class="footer___item_phone" href="tel:8(800)0000000">8 (800) 000-00-00</a></li>
+            <li><a class="footer___item_email" href="mailto:info@mail.ru">info@mail.ru</a></li>
+          </ul>
+        </li>
+        <li class="footer___item">
+          <h3>Контакты</h3>
+          <p>г. Москва, ул. Иванова<br>д. 5, пом. 8, оф. 11</p>
+          <ul class="footer___list">
+            <li><a class="footer___item_phone" href="tel:8(800)0000000">8 (800) 000-00-00</a></li>
+            <li><a class="footer___item_phone" href="tel:8(800)0000000">8-800-000-00-00</a></li>
+            <li><a class="footer___item_email" href="mailto:info@yandex.ru">info@yandex.ru</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    <div class="footer__bottom">
+      <p>2010-2019 Ltd. Все права защищены.</p>
+      <ul class="footer__bottom_list">
+        <li>
+          <a href="#"><span class="visually-hidden">Мы в вконтакт</span>
+            <img src="img/vk-icon.png" alt="Вконтакте">
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <span class="visually-hidden">Мы в фейсбуке</span>
+            <img src="img/facebook-icon.png" alt="Фейсбук">
+          </a>
+        </li>
+        <li>
+          <a href="#"><span class="visually-hidden">Мы в инстаграм</span>
+            <img src="img/instagram-icon.png" alt="Инстаграм">
+          </a>
+        </li>
+      </ul>
+    </div>
   </footer>
 
   <script src="js/main.js"></script>
